--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.h2.console.settings.web-allow-others=true
+spring.jpa.show-sql=true
 
-spring.datasource.url=jdbc:h2:tcp://h2:1521/mem:db-test
+spring.datasource.url=jdbc:h2:tcp://h2:1521/mem:catalogue-db
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
