--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.h2.console.path=/h2-console
 spring.h2.console.settings.web-allow-others=true
 spring.jpa.show-sql=true
 
-spring.datasource.url=jdbc:h2:tcp://h2:1521/mem:catalogue-db
+spring.datasource.url=jdbc:h2:tcp://h2:1521/mem:test-db
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
