--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - '~/.m2:/root/.m2'
     ports:
       - '8083:8080'
-    command: mvn clean spring-boot:run
+    command: mvn clean test spring-boot:run
     depends_on:
       - h2
 
